rename to erleans_provider_pgo

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,10 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [{pgo, "~> 0.11.0"}]}.
 
 {shell, [
   % {config, "config/sys.config"},
-    {apps, [erleans_postgres_provider]}
+    {apps, [erleans_provider_pgo]}
 ]}.
+
+{profiles, [{test, [{deps, [erleans]},
+                    {erl_opts, [nowarn_export_all]}]}]}.
