update deps and add CI testing

--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,18 @@
 {erl_opts, [debug_info]}.
-{deps, [{pgo, "~> 0.11.0"}]}.
+{deps, [pgo,
+        eql]}.
 
-{shell, [
-  % {config, "config/sys.config"},
-    {apps, [erleans_provider_pgo]}
-]}.
+{profiles, [{test, [{erl_opts, [nowarn_export_all]},
+                    {deps, [{erleans, {git, "https://github.com/erleans/erleans", {branch, "global-refactor"}}}]}]}]}.
 
-{profiles, [{test, [{deps, [erleans]},
-                    {erl_opts, [nowarn_export_all]}]}]}.
+{ct_opts, [{ct_hooks, [cth_surefire]},
+           {sys_config, "test/sys.config"}]}.
+
+{shell, [{apps, [erleans_provider_pgo]}]}.
+
+{project_plugins, [covertool]}.
+
+{cover_enabled, true}.
+{cover_opts, [verbose]}.
+{cover_export_enabled, true}.
+{covertool, [{coverdata_files, ["ct.coverdata"]}]}.
