skip unused function calls

--- a/rebar.config
+++ b/rebar.config
@@ -16,3 +16,11 @@
 {cover_opts, [verbose]}.
 {cover_export_enabled, true}.
 {covertool, [{coverdata_files, ["ct.coverdata"]}]}.
+
+
+{xref_checks,
+ [
+  %% enable most checks, but avoid 'unused calls'
+  undefined_function_calls, undefined_functions, locals_not_used,
+  deprecated_function_calls, deprecated_functions
+ ]}.
