--- a/.github/workflows/ct.yml
+++ b/.github/workflows/ct.yml
@@ -51,11 +51,12 @@ jobs:
     - name: Covertool
       if: ${{ always() }}
       run: rebar3 covertool generate
-    - uses: codecov/codecov-action@v2
+    - uses: codecov/codecov-action@v4s
       if: ${{ always() }}
       with:
         file: _build/test/covertool/erleans_provider_pgo.covertool.xml
         env_vars: OTP_VERSION
+        token: ${{ secrets.CODECOV_TOKEN }}
 
     - name: Dialyzer
       run: rebar3 dialyzer
