--- a/.github/workflows/ct.yml
+++ b/.github/workflows/ct.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Covertool
       if: ${{ always() }}
       run: rebar3 covertool generate
-    - uses: codecov/codecov-action@v4s
+    - uses: codecov/codecov-action@v4
       if: ${{ always() }}
       with:
         file: _build/test/covertool/erleans_provider_pgo.covertool.xml
