--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,11 @@
 services:
   postgres:
-    image: cimg/postgres:14.2
+    image: postgres:17
     restart: always
     ports:
     - 5432:5432
     tmpfs:
-    - /var/lib/newpostgres/data
+    - /var/lib/postgres/data
     command: -c fsync=off -c full_page_writes=off
     environment:
     - POSTGRES_USER=test
